syntax = "proto3";

package v1;

option go_package = "github.com/dns2012/dealls-dating-service/v1";

import "schema/v1/constant.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

message LoginRequest {
  string email = 1 [
    (validate.rules).string.email = true
  ];
  string password = 2 [
    (validate.rules).string.min_len = 8
  ];
}

message RegisterRequest {
  string full_name = 1 [
    (validate.rules).string.min_len = 5
  ];
  string email = 2 [
    (validate.rules).string.email = true
  ];
  string password = 3 [
    (validate.rules).string.min_len = 8
  ];
  string confirm_password = 4 [
    (validate.rules).string.min_len = 8
  ];
  string birth_date = 5 [
    (validate.rules).string.min_len = 8,
    (validate.rules).string.pattern = "^\\d{4}-\\d{2}-\\d{2}$"
  ];
  Gender gender = 6 [
    (validate.rules).enum = {in: [1,2]}
  ];
  string company = 7 [
    (validate.rules).string.min_len = 5
  ];
  string job_title = 8 [
    (validate.rules).string.min_len = 5
  ];
}

message AuthResponseData {
  string access_token = 1;
}

message AuthResponse {
  AuthResponseData data = 1;
}

service AuthSchema {
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/v1/register"
      body: "*"
    };
  }
}